--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   //get canvas context
   let c  = canvas.getContext('2d');
-  c.font = `${FONTSIZE}px Arial`;
+  c.font = `${FONTSIZE}px Monospace`;
 
   class Cercle{
     constructor(x,y){
@@ -42,8 +42,8 @@
     }
 
     crea_link(cercle){
-      if(this==cercle)                return false;
-      if(this.links.includes(cercle)) return false;
+      if(this==cercle)                return false; //ell mateix
+      if(this.links.includes(cercle)) return false; //ja existeix
 
       this.links.push(cercle);
       cercle.links.push(this);
@@ -132,7 +132,6 @@
 
         c.moveTo(this.x,   this.y);
         c.lineTo(cercle.x, cercle.y);
-
         c.stroke();
         c.closePath();
       });
@@ -189,14 +188,13 @@
     c.money = Math.floor(Math.random()*N - N/2);
   }
 
-  //crea links
+  //crea links entre cercles
   for(let i=0;i<N;i++){
     let c = cercles[i];
 
-    //nombre de links
+    //nombre de links aleatori: 1~3 des de cada cercle
     let n = 1+Math.floor(2*Math.random());
     for(let j=0;j<n;j++){
-
       let link_creat = false;
       while(link_creat==false){
         let index_random = Math.floor(Math.random()*N);
@@ -213,20 +211,26 @@
   //una partida es podrà guanyar si la suma de diners és com a mínim el genus
   let genus = suma_arestes - N + 1;
 
-  //calcula suma de diners
+  //calcula suma diners
   let suma_dolars = cercles.map(c=>c.money).reduce((p,c)=>p+c,0);
+
+  //posa diners si n'hi ha menys que "genus"
   while(suma_dolars<genus){
     let index_random = Math.floor(Math.random()*N);
     cercles[index_random].money++;
     suma_dolars = cercles.map(c=>c.money).reduce((p,c)=>p+c,0);
   }
+  //treu diners si n'hi ha més que nodes
+  while(suma_dolars>N){
+    let index_random = Math.floor(Math.random()*N);
+    cercles[index_random].money--;
+    suma_dolars = cercles.map(c=>c.money).reduce((p,c)=>p+c,0);
+  }
 
-  console.log({N,suma_dolars,suma_arestes, genus});
-
-  //mouse
+  /*controls mouse*/
   let cercle_seleccionat=null;
   let cercles_previament_seleccionats=new Set();
-  let sha_mogut = false; //s'ha mogut un cercle? per evitar donar diners
+  let sha_mogut=false;//evitar donar diners quan es mou un cercle
 
   //moure mouse
   canvas.addEventListener("mousemove",function(event){
@@ -285,7 +289,7 @@
     //mou diners entre cercles
     if(cercle_seleccionat && !sha_mogut){
       cercle_seleccionat.money -= cercle_seleccionat.links.length;
-      cercle_seleccionat.links.forEach(c=>c.money+=1);
+      cercle_seleccionat.links.forEach(c=>c.money++);
     }
     cercle_seleccionat=null;
   });
@@ -320,12 +324,27 @@
     requestAnimationFrame(animate);
     c.clearRect(0,0,canvas.width,canvas.height);
 
+    //print debug info
+    if(true){
+      c.fillStyle="black";
+      let info=[
+        `nodes:${N}`,
+        `links:${suma_arestes}`,
+        `euros:${suma_dolars}`,
+        `genus:${genus} `,
+      ];
+      info.forEach((txt,i)=>{
+        c.fillText(txt,2,(i+1)*FONTSIZE-7);
+      });
+    }
+
+    //itera cercles
     cercles.forEach(c=>{
-      if(c==cercle_seleccionat) return;
+      if(c==cercle_seleccionat)                  return;
       if(cercles_previament_seleccionats.has(c)) return;
       c.update_state();
     });
-    cercles.forEach(c=>c.dibuixa_links() );
-    cercles.forEach(c=>c.dibuixa()       );
+    cercles.forEach(c=>c.dibuixa_links());
+    cercles.forEach(c=>c.dibuixa()      );
   })();
 </script>
